Added Email and  Password validators,User validation

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,9 +1,12 @@
 language = en
 label.form.title
-label.user.firstName=firstName
-label.user.lastName=lastName
-label.user.email=emal
-label.user.password=password
-label.user.confirmPass=confirm pass
-label.form.submit=submit
+label.user.firstName=FirstName
+label.user.lastName=LastName
+label.user.email=Emal
+label.user.password=Password
+label.user.confirmPass=Confirm pass
+label.form.submit=Submit
 label.form.loginLink=Log in
+Size.userDto.firstName=Length must be greater than {min}
+Size.userDto.lastName=Length must be greater than {min}
+Size.userDto.email=Length must be greater than {min}
