--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -7,4 +7,7 @@ label.user.password=\u041f\u0430\u0440\u043e\u043b\u044c
 label.user.confirmPass=\u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u043f\u0430\u0440\u043e\u043b\u044c
 label.form.submit=\u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044c
 label.form.loginLink=\u0412\u043e\u0439\u0442\u0438
+Size.userDto.firstName=Length must be greater than {min}
+Size.userDto.lastName=Length must be greater than {min}
+Size.userDto.email=Length must be greater than {min}
 
